Reordered images and made start on nav panel

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" type="image/jpeg" href="/static/images/10.jpeg" />
+    <link
+      rel="shortcut icon"
+      type="image/jpeg"
+      href="/static/images/favicon.jpeg"
+    />
     <title>Violet Argent Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
