--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <link
       rel="shortcut icon"
       type="image/jpeg"
-      href="/static/images/favicon.jpeg"
+      href="/static/images/hero1.jpeg"
     />
     <title>Violet Argent Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
